src/auryn/air/snapshots/auryn__auryn__air__tests__invalid_assignment.snap
---
source: src/auryn/air/mod.rs
expression: "compile_wrapped(\"let a = print(1)\\nprint(a + 1)\")"
---
AirOutput {
    air: Air {
        functions: {
            AirFunctionId(
                SyntaxId {
                    file_id: FileId(
                        0,
                    ),
                    number: Some(
                        4,
                    ),
                },
            ): AirFunction {
                type: Computed(
                    Function(
                        FunctionType {
                            parameters: [],
                            return_type: Null,
                        },
                    ),
                ),
                unresolved_type: Function {
                    parameters: [],
                    return_type: None,
                },
                ident: "main",
                blocks: {
                    AirBlockId(
                        0,
                    ): AirBlock {
                        nodes: [
                            AirNode {
                                id: SyntaxId {
                                    file_id: FileId(
                                        0,
                                    ),
                                    number: Some(
                                        211106232532993,
                                    ),
                                },
                                kind: Assignment(
                                    Assignment {
                                        target: Local(
                                            AirLocalValueId(
                                                0,
                                            ),
                                        ),
                                        expression: AirExpression {
                                            id: SyntaxId {
                                                file_id: FileId(
                                                    0,
                                                ),
                                                number: Some(
                                                    221158910272660,
                                                ),
                                            },
                                            type: Computed(
                                                Null,
                                            ),
                                            kind: IntrinsicCall(
                                                IntrinsicCall {
                                                    intrinsic: Print,
                                                    arguments: [
                                                        AirExpression {
                                                            id: SyntaxId {
                                                                file_id: FileId(
                                                                    0,
                                                                ),
                                                                number: Some(
                                                                    222275874465957,
                                                                ),
                                                            },
                                                            type: Computed(
                                                                Number,
                                                            ),
                                                            kind: Constant(
                                                                Number(
                                                                    1,
                                                                ),
                                                            ),
                                                        },
                                                    ],
                                                },
                                            ),
                                        },
                                    },
                                ),
                            },
                            AirNode {
                                id: SyntaxId {
                                    file_id: FileId(
                                        0,
                                    ),
                                    number: Some(
                                        234562480592215,
                                    ),
                                },
                                kind: Expression(
                                    AirExpression {
                                        id: SyntaxId {
                                            file_id: FileId(
                                                0,
                                            ),
                                            number: Some(
                                                234562480592215,
                                            ),
                                        },
                                        type: Computed(
                                            Null,
                                        ),
                                        kind: IntrinsicCall(
                                            IntrinsicCall {
                                                intrinsic: Print,
                                                arguments: [
                                                    AirExpression {
                                                        id: SyntaxId {
                                                            file_id: FileId(
                                                                0,
                                                            ),
                                                            number: Some(
                                                                241892558110721,
                                                            ),
                                                        },
                                                        type: Computed(
                                                            Number,
                                                        ),
                                                        kind: BinaryOperator(
                                                            BinaryOperation {
                                                                lhs: AirExpression {
                                                                    id: SyntaxId {
                                                                        file_id: FileId(
                                                                            0,
                                                                        ),
                                                                        number: Some(
                                                                            241892558110725,
                                                                        ),
                                                                    },
                                                                    type: Computed(
                                                                        Null,
                                                                    ),
                                                                    kind: Variable(
                                                                        Local(
                                                                            AirLocalValueId(
                                                                                0,
                                                                            ),
                                                                        ),
                                                                    ),
                                                                },
                                                                rhs: AirExpression {
                                                                    id: SyntaxId {
                                                                        file_id: FileId(
                                                                            0,
                                                                        ),
                                                                        number: Some(
                                                                            242992069738496,
                                                                        ),
                                                                    },
                                                                    type: Computed(
                                                                        Number,
                                                                    ),
                                                                    kind: Constant(
                                                                        Number(
                                                                            1,
                                                                        ),
                                                                    ),
                                                                },
                                                                operator: Plus,
                                                            },
                                                        ),
                                                    },
                                                ],
                                            },
                                        ),
                                    },
                                ),
                            },
                        ],
                        finalizer: Return(
                            Null(
                                SyntaxId {
                                    file_id: FileId(
                                        0,
                                    ),
                                    number: Some(
                                        211106232532991,
                                    ),
                                },
                            ),
                        ),
                    },
                },
            },
        },
        types: {},
        statics: {},
    },
    diagnostics: [
        Diagnostic {
            kind: Error(
                TypeMismatch {
                    expected: Number,
                    got: Computed(
                        Null,
                    ),
                },
            ),
            syntax_id: SyntaxId {
                file_id: FileId(
                    0,
                ),
                number: Some(
                    241892558110725,
                ),
            },
        },
    ],
}
