src/auryn/air/snapshots/auryn__auryn__air__tests__it_works.snap
---
source: src/auryn/air/mod.rs
expression: "compile(\"print(1)\")"
---
AirOutput {
    air: Air {
        functions: {
            AirFunctionId(
                SyntaxId {
                    file_id: FileId(
                        0,
                    ),
                    number: Some(
                        3,
                    ),
                },
            ): AirFunction {
                type: Computed(
                    Function(
                        FunctionType {
                            parameters: [],
                            return_type: Null,
                        },
                    ),
                ),
                declared_parameters: [],
                ident: "main",
                blocks: {
                    AirBlockId(
                        0,
                    ): AirBlock {
                        nodes: [
                            AirNode {
                                id: SyntaxId {
                                    file_id: FileId(
                                        0,
                                    ),
                                    number: Some(
                                        211106232532994,
                                    ),
                                },
                                kind: Expression(
                                    AirExpression {
                                        id: SyntaxId {
                                            file_id: FileId(
                                                0,
                                            ),
                                            number: Some(
                                                211106232532994,
                                            ),
                                        },
                                        type: Computed(
                                            Null,
                                        ),
                                        kind: IntrinsicCall(
                                            IntrinsicCall {
                                                intrinsic: Print,
                                                arguments: [
                                                    AirExpression {
                                                        id: SyntaxId {
                                                            file_id: FileId(
                                                                0,
                                                            ),
                                                            number: Some(
                                                                225179981368528,
                                                            ),
                                                        },
                                                        type: Computed(
                                                            Number,
                                                        ),
                                                        kind: Constant(
                                                            Number(
                                                                1,
                                                            ),
                                                        ),
                                                    },
                                                ],
                                            },
                                        ),
                                    },
                                ),
                            },
                        ],
                        finalizer: Return,
                    },
                },
            },
        },
    },
    diagnostics: [],
}
